# ImageProcessingCPP

./: CMakeLists.txt
Lab1/: CMakeLists.txt  Lab1.cpp  Lab1.h  adImgPro.h
Lab1/UI/: MainFraime.fbp
